tests/bonsai/error/struct_default.expect
---CODE---
1
---STDERR---
[internal] Error: /src/Parser/Parser.cpp:60
tests/bonsai/error/struct_default.bonsai:5:17: [parse error] Cannot check type of unknown var: o

    d : vec3f = o; // not allowed: non-constant set value.
                ^
